align header margin correctly

--- a/src/components/ChatDialog/ChatDialogMain/ChatDialogMain.scss
+++ b/src/components/ChatDialog/ChatDialogMain/ChatDialogMain.scss
@@ -17,6 +17,8 @@
     display: flex;
     justify-content: space-between;
     margin: 0;
+    margin-left: -3px;
+    margin-right: -13px;
 
     .back-arrow {
       align-items: center;
